--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <canvas id="faceCanvas"></canvas>
 
     <div class="backdrop top" id="backdropTop">
-      <h1 class="title app-name">Vượt Ngàn Tầng Mây</h1>
+      <h1 class="title app-name">Chơi Game Đê</h1>
       <h2 class="title congrats">Xin chúc mừng</h2>
-      <h3 class="sub-title app-slogan">Gom đầy nụ cười</h3>
-      <h3 id="name" class="sub-title name">Kids Plaza</h3>
+      <h3 class="sub-title app-slogan">AR Game</h3>
+      <h3 id="name" class="sub-title name"></h3>
 
       <div class="point">
         <img src="images/point_star.png" alt="">
